# mimir

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  README.md  default.nix  flake.nix  main.c
docs/: mimir.1
src/: CMakeLists.txt  database.c  database_v2.c  io.c  main.c
src/include/: config.h  database.h  database_v2.h  io.h
src/utils/: err.c  errs.c  fs.c  log.c
src/utils/include/: err.h  errs.h  fs.h  log.h
test/: CMakeLists.txt  database_test.c  test.c
test/fs/: dir.c  dir.h  file.c  file.h  temp.c  temp.h
utils/: err.c  err.h  fs.c  fs.h  log.c  log.h  path.c  path.h  schema.h
